tests/errors/invalid_predicate.rs
use set_builder::set;

fn main() {
    set! { x : x <- [1, 2, 3], x + 1 };
}
