tests/errors/invalid_predicate.stderr
error[E0308]: mismatched types
 --> tests/errors/invalid_predicate.rs:4:32
  |
4 |     set! { x : x <- [1, 2, 3], x + 1 };
  |                                ^^^^^ expected `bool`, found integer
